<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.mirea.saburov.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_ip"
        android:name="com.mirea.saburov.mireaproject.ui.web.IpInfo"
        android:label="@string/menu_ip"
        tools:layout="@layout/fragment_ip_info" />

    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.mirea.saburov.mireaproject.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculcator" />

    <fragment
        android:id="@+id/nav_browser"
        android:name="com.mirea.saburov.mireaproject.ui.browser.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />

    <fragment
        android:id="@+id/nav_music"
        android:name="com.mirea.saburov.mireaproject.ui.music.MusicFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.mirea.saburov.mireaproject.ui.map.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_sensor"
        android:name="com.mirea.saburov.mireaproject.ui.sensor.Sensor"
        android:label="@string/menu_sensor"
        tools:layout="@layout/fragment_sensor" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.mirea.saburov.mireaproject.ui.camera.Camera"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_dictaphone"
        android:name="com.mirea.saburov.mireaproject.ui.music.DictaphoneFragment"
        android:label="@string/menu_dictaphone"
        tools:layout="@layout/fragment_dictaphone" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mirea.saburov.mireaproject.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_stories"
        android:name="com.mirea.saburov.mireaproject.ui.story.StoryFragment"
        android:label="@string/menu_stories"
        tools:layout="@layout/fragment_story" />
</navigation>